2006-03-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/verification.doc: Added tests for SUSE 10.0 (x86_64)
	and SunOS 5.9 (SPARC).

2006-02-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/verification.doc: Verification pages redesigned to
	include more information. Added tests statuses for Gentoo Linux
	and Cygwin operating systems.

2006-02-20  Tony Ottosson  <tonyottosson@users.sourceforge.net>
	
	* doc/local/{features.doc, index.doc, sources.mk}:
	Added a list of features of IT++.

2006-02-17  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* doc/tutorial/matlab_itpp.doc, doc/tutorial/tutorial.doc,
	doc/tutorial/sources.mk: Added first draft of how a Matlab/IT++
	conversion table can look like, more to be added
	later. Restructured the tutorial page.
	
2006-02-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: Fixed a problem with the same ASSERT_LEVEL
	definition in both debug and standard target libraries.

	* TODO: Updated to reflect recent brainstorming among developers.
	
	* doc/local/linking.doc: Minor updates to reflect recent changes.

	* itpp-config.in, itpp.pc.in: Added `--cflags-opt' and
	`--debug-opt' switches to `itpp-config' script. Simple `--cflags'
	switch does not include any optimisation flags in both script.

	* INSTALL, README, doc/local/installation.doc,
	doc/local/linking.doc: Documentation updated to reflect recent
	changes in the configuration process.
	
	* configure.ac, **/Makefile.am, itpp-config.in, itpp.pc.in: Major
	changes in the configuration process. Since now it is possible to
	build and install two separate libraries: the optimised
	`libitpp.*' and debug `libitpp_debug.*'. The latter one is only
	build when `--enable-debug' switch is used during configuration.
	`itpp-config' script has been extended with `--cflags-debug' and 
	`--libs-debug' switches.
	Besides, if CXXFLAGS is not set in the shell environment, it is